// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link activeClassName? 1`] = `
"<linkComponent
  activeClassName=\\"activeCx\\"
  href=\\"/internal\\"
  to=\\"/internal\\"
>
  c
</linkComponent>"
`;

exports[`Link activeClassName? 2`] = `
"<linkComponent
  activeClassName=\\"activeCx\\"
  href=\\"/internal\\"
  to=\\"/internal\\"
>
  c
</linkComponent>"
`;

exports[`Link activeStyle? 1`] = `
"<linkComponent
  activeStyle={{
    color: 'blue'
  }}
  href=\\"/internal\\"
  to=\\"/internal\\"
>
  c
</linkComponent>"
`;

exports[`Link activeStyle? 2`] = `
"<linkComponent
  activeStyle={{
    color: 'blue'
  }}
  href=\\"/internal\\"
  to=\\"/internal\\"
>
  c
</linkComponent>"
`;

exports[`Link works with \`\`href\`\` 1`] = `
"<linkComponent
  href=\\"/b\\"
  to=\\"/b\\"
>
  c
</linkComponent>"
`;

exports[`Link works with \`\`to\`\` 1`] = `
"<linkComponent to=\\"/b\\">
  c
</linkComponent>"
`;

exports[`Link works with external \`\`href\`\` 1`] = `
"<linkComponent
  href=\\"http://b.com\\"
  to=\\"http://b.com\\"
>
  c
</linkComponent>"
`;

exports[`Link works with external \`\`href\`\` 2`] = `
"<linkComponent
  href=\\"http://b.com\\"
  to=\\"http://b.com\\"
>
  c
</linkComponent>"
`;

exports[`Link works with internal \`\`href\`\` 1`] = `
"<linkComponent
  href=\\"test://url.tld/internal\\"
  to=\\"test://url.tld/internal\\"
>
  c
</linkComponent>"
`;

exports[`Link works with internal \`\`href\`\` 2`] = `
"<linkComponent
  href=\\"/internal\\"
  to=\\"/internal\\"
>
  c
</linkComponent>"
`;
